<resources>
    <string name="app_name">Film Me In</string>

    <!-- Main Activity Strings -->
    <string name="about">About</string>
    <string name="attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="error_text">An error occurred.\n\nClick anywhere to refresh.</string>
    <string name="sort_by">Sort by:</string>
    <string-array name="sort_by_array">
        <item>@string/most_popular</item>
        <item>@string/highest_rated</item>
        <item>@string/favorites</item>
    </string-array>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorites">Favorites</string>
    <string name="movie_results_key" translatable="false">movie_results</string>
    <string name="spinner_value_key" translatable="false">spinner_value</string>
    <string name="api_key_key" translatable="false">api_key</string>
    <string name="api_key" translatable="false">47ba04034a3ebe6cffa7dbc0a0ae4dd8</string> <!-- TODO Please Insert API Key-->

    <!-- About Activity Strings -->
    <string name="app_details">This app was created for a class on Udacity.com, as practice in developing Android applications.\n\nIt is not intended for commercial use.\n\nThis product uses the TMDb API but is not endorsed or certified by TMDb.\n\nBase film canister icon made by Freepik from www.flaticon.com.</string>

    <!-- Detail Activity Strings -->
    <string name="release_date">Release Date:</string>
    <string name="voter_average">Voter Average:</string>
    <string name="synopsis">Plot Synopsis:</string>
    <string name="reviews_tag">Reviews:</string>

    <string name="intent_extra_key" translatable="false">movie</string>
    <string name="detail_error_message">Movie details not found.</string>

    <string name="movie_added">Added to favorites.</string>
    <string name="movie_deleted">Removed from favorites.</string>

    <string name="show_trailer">Show Trailer</string>

    <string name="videos">videos</string>
    <string name="reviews">reviews</string>

    <string name="no_youtube_video">No YouTube video found.</string>

    <string name="movie_poster_descrip">Movie Poster</string>

    <string name="movie_poster_transition_key">movie_poster_transition_key</string>

    <!-- Utilities Strings -->
    <!-- JSON Movie Keys -->
    <string name="json_results_key" translatable="false">results</string>
    <string name="id_key" translatable="false">id</string>
    <string name="title_key" translatable="false">title</string>
    <string name="release_date_key" translatable="false">release_date</string>
    <string name="poster_image_link_key" translatable="false">poster_path</string>
    <string name="voter_average_key" translatable="false">vote_average</string>
    <string name="plot_synopsis_key" translatable="false">overview</string>

    <!-- JSON Trailer Keys -->
    <string name="video_results_key" translatable="false">results</string>
    <string name="video_type_key" translatable="false">type</string>
    <string name="video_type_trailer" translatable="false">Trailer</string>
    <string name="video_site_key" translatable="false">site</string>
    <string name="video_site_youtube" translatable="false">YouTube</string>
    <string name="video_link_query" translatable="false">v</string>
    <string name="video_link_key" translatable="false">key</string>

    <!-- JSON Reviews Keys -->
    <string name="reviews_results_key" translatable="false">results</string>
    <string name="reviews_content_key" translatable="false">content</string>

    <!-- Poster Image Link Start -->
    <string name="poster_image_link_base" translatable="false">http://image.tmdb.org/t/p/original</string>
    
</resources>
